[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/Menus/Options.gd" type="Script" id=2]
[ext_resource path="res://Fonts/NovaFlat.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/Menus/MenuHeader.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]

size = 29
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="Node2D" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1336.0
margin_bottom = 768.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Theme", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="BackButton" type="Button" parent="." index="0"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -128.0
margin_right = 182.0
margin_bottom = -38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Go back to the Main Menu."
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Header" parent="." index="1" instance=ExtResource( 4 )]

text = "Options"

[node name="TabContainer" type="TabContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 180.0
margin_top = 100.0
margin_right = 1160.0
margin_bottom = 620.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
tab_align = 0
tabs_visible = true
__meta__ = {
"_edit_lock_": true
}

[node name="Audio" type="Tabs" parent="TabContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 54.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
tab_align = 1
scrolling_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="MasterText" type="Label" parent="TabContainer/Audio" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_top = 86.0
margin_right = 296.0
margin_bottom = 122.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Master Volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MasterSlider" type="HSlider" parent="TabContainer/Audio/MasterText" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_right = 476.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = -24.0
max_value = 0.0
step = 0.05
page = 0.0
value = 0.0
exp_edit = true
rounded = false
editable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="MusicText" type="Label" parent="TabContainer/Audio" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_top = 146.0
margin_right = 296.0
margin_bottom = 182.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Music Volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MusicSlider" type="HSlider" parent="TabContainer/Audio/MusicText" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_right = 476.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = -24.0
max_value = 0.0
step = 0.05
page = 0.0
value = 0.0
exp_edit = true
rounded = false
editable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="SFXText" type="Label" parent="TabContainer/Audio" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_top = 206.0
margin_right = 296.0
margin_bottom = 242.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "SFX Volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SFXSlider" type="HSlider" parent="TabContainer/Audio/SFXText" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_right = 476.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = -24.0
max_value = 0.0
step = 0.05
page = 0.0
value = 0.0
exp_edit = true
rounded = false
editable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="Gameplay" type="Tabs" parent="TabContainer" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 54.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
tab_align = 1
scrolling_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="CheatEnter" type="LineEdit" parent="TabContainer/Gameplay" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_top = 206.0
margin_right = 456.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
secret = true
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="CheatText" type="Label" parent="TabContainer/Gameplay" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_top = 166.0
margin_right = 456.0
margin_bottom = 202.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Enter a cheat:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CheatWarning" type="Label" parent="TabContainer/Gameplay" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_top = 256.0
margin_right = 456.0
margin_bottom = 317.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "warning"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="CheatViewerPanelText" type="Label" parent="TabContainer/Gameplay" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 576.0
margin_top = 26.0
margin_right = 936.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Active Cheats"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CheatViewerPanel" type="Panel" parent="TabContainer/Gameplay/CheatViewerPanelText" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 360.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ActiveCheats" type="VBoxContainer" parent="TabContainer/Gameplay/CheatViewerPanelText/CheatViewerPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 360.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 5
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Graphics" type="Tabs" parent="TabContainer" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 54.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
tab_align = 1
scrolling_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="VsyncToggle" type="CheckBox" parent="TabContainer/Graphics" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_top = 136.0
margin_right = 246.0
margin_bottom = 205.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Toggle V-Sync."
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "V-Sync"
flat = true
align = 0
_sections_unfolded = [ "Hint" ]

[node name="FullscreenToggle" type="CheckBox" parent="TabContainer/Graphics" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_top = 66.0
margin_right = 246.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Toggle fullscreen."
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Fullscreen"
flat = true
align = 0
_sections_unfolded = [ "Hint" ]

[node name="Resolution" type="Label" parent="TabContainer/Graphics" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 636.0
margin_top = 86.0
margin_right = 916.0
margin_bottom = 122.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Resolution"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Resolutions" type="OptionButton" parent="TabContainer/Graphics/Resolution" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 280.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
items = [  ]
selected = -1
_sections_unfolded = [ "Rect" ]

[node name="BackgroundParticles" type="Label" parent="TabContainer/Graphics" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 636.0
margin_top = 256.0
margin_right = 925.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Background Particles"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ParticleSettings" type="OptionButton" parent="TabContainer/Graphics/BackgroundParticles" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 280.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
items = [  ]
selected = -1
_sections_unfolded = [ "Rect" ]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="tab_selected" from="TabContainer" to="." method="_on_TabContainer_tab_selected"]

[connection signal="value_changed" from="TabContainer/Audio/MasterText/MasterSlider" to="." method="_on_slider_changed" binds= [ 0 ]]

[connection signal="value_changed" from="TabContainer/Audio/MusicText/MusicSlider" to="." method="_on_slider_changed" binds= [ 2 ]]

[connection signal="value_changed" from="TabContainer/Audio/SFXText/SFXSlider" to="." method="_on_slider_changed" binds= [ 1 ]]

[connection signal="text_entered" from="TabContainer/Gameplay/CheatEnter" to="." method="_on_Cheat_text_entered"]

[connection signal="toggled" from="TabContainer/Graphics/VsyncToggle" to="." method="_on_VSync_toggled"]

[connection signal="pressed" from="TabContainer/Graphics/FullscreenToggle" to="." method="_on_FullscreenToggle_pressed"]

[connection signal="item_selected" from="TabContainer/Graphics/Resolution/Resolutions" to="." method="_on_Resolutions_selected"]

[connection signal="item_selected" from="TabContainer/Graphics/BackgroundParticles/ParticleSettings" to="." method="_on_ParticleSettings_item_selected"]


